# FaceTimeMarker

./: .gitignore  .gitmodules  README.md  alembic.ini  pyproject.toml
configs/: ai.toml  default.toml  outputs.toml  recognition.toml  reference_export.toml
configs/profiles/: anime-high-recall.toml  anime-lowres-strict.toml
docs/: README-产品设计.md  README-开发指南.md  README-技术架构.md  README-用户使用.md  README.md  实施路线图.md  批量整理人脸交互问题记录.md  需求与技术选型.md  项目完整性评估.md  项目架构.md
migrations/: env.py
migrations/versions/: .gitkeep
scripts/: analyze-apple.sh  analyze-cpu.sh  analyze-hardware.sh  analyze-intel.sh  analyze-nvidia.sh  benchmark-apple.sh  benchmark-cpu.sh  benchmark-hardware.sh  benchmark-intel.sh  benchmark-nvidia.sh  build.sh  check.sh  dev-api.sh  dev-web.sh  dev.sh  hardware.sh
src/adapters/exporters/: clip_exporter.py  csv_exporter.py  face_crop_exporter.py  json_exporter.py
src/adapters/face/: base.py  insightface_analyzer.py
src/adapters/identity/: __init__.py  store.py
src/adapters/tracking/: base.py  boxmot_botsort.py  supervision_bytetrack.py
src/apps/: cli.py
src/core/: cache.py  config.py  hardware.py  models.py  pipeline.py  timecode.py
tests/: test_api_review.py  test_boxmot_botsort.py  test_config.py  test_hdbscan_clusterer.py  test_identity_store.py  test_insightface_analyzer.py  test_json_exporter.py  test_pipeline.py  test_sqlite_store.py  test_timecode.py  test_timeline_builder.py
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
web/src/: App.vue  api.ts  main.ts  router.ts  style.css
(+42 files in other folders)
