[project]
name = "facetimemarker"
version = "0.1.0"
description = "离线视频人脸聚类与人物时间轴分析工具。"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "click>=8.1.8",
    "fastapi>=0.116.0",
    "litellm>=1.81.0",
    "numpy>=1.26,<3",
    "opencv-python>=4.10.0.84,<5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.5.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.67.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
vision = [
    "boxmot>=21.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.0",
    "supervision>=0.25.0,<0.30.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
facetimemarker = "apps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/adapters", "src/apps"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "third_party",
    "data",
    "outputs",
    "_outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
